# LabelGuard

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yaml
notebooks/: data_exploration.ipynb  distrib_exploration.ipynb  model_construction.ipynb  test_db.ipynb
src/: train.py
src/datasets/: clean_dataset.py  correct_dataset.py  data_exportation.py  data_importation.py  data_preprocessing.py  training-data.yaml
src/datasets/parquet/: data_exportation.py  data_importation.py  data_preprocessing.py
src/datasets/qdrant/: data_exportation.py  data_importation.py  data_preprocessing.py  transfer_to_qdrant.py
src/embeddings/: async_embedder.py  basic_embedder.py  embedding_factory.py  embedding_interface.py  offline_embedder.py  openai_embedder.py
src/import_data/: data_sampler.py
src/models/: model_factory.py  model_interface.py  sklearn_model.py  torch_model.py  xgboost_model.py
src/preprocess/: data_processing.py
src/training/: argo-data-prep.yaml  argo-training.yaml  prepare_training_data.py  train.py  trainer.py  training.yaml  training_data.yaml
tests/: test_embedders.py  test_models.py
tests/datasets/: test_data_importation.py  test_data_preprocessing.py
