[project]
name = "labelguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=3.10.1",
    "pandas>=2.3.3",
    "polars>=1.39.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "xgboost>=3.2.0",
]
